--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     width: 60%;
     margin: 50px auto 0px;
     color: white;
-    background: #5F9EA0;
+    background: #365fd9;
     text-align: center;
     border: 1px solid #B0C4DE;
     border-bottom: none;
@@ -46,7 +46,7 @@
     padding: 10px;
     font-size: 15px;
     color: white;
-    background: #5F9EA0;
+    background: #4c7fdf;
     border: none;
     border-radius: 5px;
   }
